v2.0.0 - merged all and updater