@@ -2,33 +2,48 @@ package com.gxlg.librgetter;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import com.gxlg.librgetter.command.LibrGetCommand;
+import com.google.gson.JsonObject;
+import com.gxlg.librgetter.utils.MultiVersion;
 import net.fabricmc.api.ClientModInitializer;
-import net.fabricmc.fabric.api.client.command.v2.ClientCommandRegistrationCallback;
+import net.fabricmc.fabric.api.client.networking.v1.ClientPlayConnectionEvents;
 import net.fabricmc.loader.api.FabricLoader;
+import net.fabricmc.loader.api.ModContainer;
+import net.minecraft.client.network.ClientPlayerEntity;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 
 public class LibrGetter implements ClientModInitializer {
     public static final String MOD_ID = "librgetter";
     public static final Logger LOGGER = LogManager.getLogger(MOD_ID);
+    public static MultiVersion MULTI;
 
     public static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
     private static Path confPath;
     public static Config config;
 
+    public static String newVersion;
+
     @Override
     public void onInitializeClient() {
+        MULTI = new MultiVersion();
+        MULTI.registerCommand();
 
-        ClientCommandRegistrationCallback.EVENT.register(LibrGetCommand::register);
-        LOGGER.info("Hello World from LibrGetter!");
+        if (MULTI.getApiLevel() == -1) {
+            throw new RuntimeException("This version is not supported by LibrGetter!");
+        }
+
+        LOGGER.info("Hello World from LibrGetter! Running on {}", MULTI.getVersion());
 
         Path configPath = FabricLoader.getInstance().getConfigDir().resolve("librgetter.json");
         if (Files.notExists(configPath)) {
@@ -48,6 +63,37 @@ public class LibrGetter implements ClientModInitializer {
             }
         }
         saveConfigs();
+
+        if (config.checkUpdate) {
+            // checking for a new update
+            CompletableFuture.runAsync(() -> {
+                LOGGER.warn("start checking");
+                try {
+                    URL url = new URL("https://api.github.com/repos/gXLg/libr-getter/releases/latest");
+                    InputStreamReader reader = new InputStreamReader(url.openStream());
+                    JsonObject data = new Gson().fromJson(reader, JsonObject.class);
+                    reader.close();
+
+                    Optional<ModContainer> container = FabricLoader.getInstance().getModContainer(MOD_ID);
+                    if (!container.isPresent()) return;
+
+                    String version = "v" + container.get().getMetadata().getVersion().getFriendlyString();
+                    String newest = data.get("tag_name").getAsString();
+
+                    if (!newest.equals(version)) newVersion = newest + " - " + data.get("name").getAsString();
+                } catch (IOException ignored) {
+                }
+            });
+
+            // notifying about update
+            ClientPlayConnectionEvents.JOIN.register((handler, sender, client) -> {
+                ClientPlayerEntity player = client.player;
+                if (newVersion != null) {
+                    MULTI.sendMessage(player, "New version of LibrGetter is available on GitHub:\n" + newVersion, false);
+                    newVersion = null;
+                }
+            });
+        }
     }
 
     public static void saveConfigs() {
@@ -62,7 +108,7 @@ public class LibrGetter implements ClientModInitializer {
 
             Path tempPath = confPath.resolveSibling(confPath.getFileName() + ".tmp");
             Files.createFile(tempPath);
-            Files.writeString(tempPath, GSON.toJson(config), StandardOpenOption.WRITE);
+            Files.write(tempPath, GSON.toJson(config).getBytes(), StandardOpenOption.WRITE);
             Files.move(tempPath, confPath, StandardCopyOption.ATOMIC_MOVE, StandardCopyOption.REPLACE_EXISTING);
         } catch (IOException e) {
             throw new RuntimeException("Could not save config", e);
